[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy.png" type="Texture" id=2]
[ext_resource path="res://scripts/arm1_area.gd" type="Script" id=3]
[ext_resource path="res://scripts/arm2_area.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.8148, 16 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 165.75, 24 )

[node name="boss" type="Area2D" groups=["boss"]]
script = ExtResource( 1 )

[node name="arm1_area" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="arm1" type="Sprite" parent="arm1_area"]
position = Vector2( 17, -58 )
scale = Vector2( 6.75, 1 )
texture = ExtResource( 2 )

[node name="arm1_collision" type="CollisionShape2D" parent="arm1_area"]
position = Vector2( 18.75, -58 )
scale = Vector2( 6.75, 1 )
shape = SubResource( 2 )

[node name="arm2_area" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="arm2" type="Sprite" parent="arm2_area"]
position = Vector2( 19, 58 )
scale = Vector2( 6.75, 1 )
texture = ExtResource( 2 )

[node name="arm2_collision" type="CollisionShape2D" parent="arm2_area"]
position = Vector2( 20, 58 )
scale = Vector2( 6.75, 1 )
shape = SubResource( 2 )

[node name="boss_red" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="boss_hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="health" type="Label" parent="."]
margin_left = -217.0
margin_top = -105.0
margin_right = -97.0
margin_bottom = -91.0
text = "BOSS HEALTH: 25"

[node name="slander" type="Label" parent="."]
margin_left = -184.0
margin_top = -74.0
margin_right = 22.0
margin_bottom = -60.0
text = "You egg wanker, hit me no balls!"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="arm_1_trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arm_1_trigger"]
position = Vector2( -264, -48 )
shape = SubResource( 3 )

[node name="arm_2_trigger" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="arm_2_trigger"]
position = Vector2( -262, 58 )
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_boss_area_entered"]
[connection signal="area_entered" from="arm1_area" to="arm1_area" method="_on_arm1_area_area_entered"]
[connection signal="area_entered" from="arm2_area" to="arm2_area" method="_on_arm2_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="arm_1_trigger" to="arm1_area" method="_on_arm_1_trigger_area_entered"]
[connection signal="area_exited" from="arm_1_trigger" to="arm1_area" method="_on_arm_1_trigger_area_exited"]
[connection signal="area_entered" from="arm_2_trigger" to="arm2_area" method="_on_arm_2_trigger_area_entered"]
[connection signal="area_exited" from="arm_2_trigger" to="arm2_area" method="_on_arm_2_trigger_area_exited"]
